hosts-to-be-deleted/asgard/authentik-ts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ts
  namespace: authentik
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: authentik-server
      port: { number: 80 }
  tls:
    - hosts: [authentik]
