hosts-to-be-deleted/asgard/grafana-ts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ts
  namespace: monitoring
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: grafana
      port: { number: 80 }
  tls:
    - hosts: [grafana]
